fix(material/expansion): Expansion panel content flickers during animation for lazy-loaded custom height nested expansion panels
This fix introduces workaround for a `void => collapsed` animation that is causing improper behaviour for lazy-loaded body.
First, it disables first `void => collapsed` animation after init to disable recalculation which fixes changing heights of inner panels.
Second, it sets `mat-expansion-panel-hidden` class on content init and removes it on creating lazy-loaded body to remove flicker of parent expansion panel

Fixes #22715

--- a/src/material/expansion/expansion-panel.scss
+++ b/src/material/expansion/expansion-panel.scss
@@ -62,6 +62,10 @@
   }
 }
 
+.mat-expansion-panel-hidden {
+  height: 0;
+}
+
 .mat-expansion-panel-body {
   padding: 0 24px 16px;
 }
